syntax="proto3";

package common;
option go_package = "github.com/smartcontractkit/chainlink-framework/capabilities/writetarget/monitoring/pb/common;common";
// [Execution Context]
message ExecutionContext {
  // Execution Context - Source
  string meta_source_id = 1;

  // Execution Context - Chain
  string meta_chain_family_name = 2;
  string meta_chain_id = 3;
  string meta_network_name = 4;
  string meta_network_name_full = 5;

  // Execution Context - Workflow (capabilities.RequestMetadata)
  string meta_workflow_id = 6;
  string meta_workflow_owner = 7;
  string meta_workflow_execution_id = 8;
  string meta_workflow_name = 9;
  uint32 meta_workflow_don_id = 10;
  uint32 meta_workflow_don_config_version = 11;
  string meta_reference_id = 12;

  // Execution Context - Capability
  string meta_capability_type = 13;
  string meta_capability_id = 14;
  uint64 meta_capability_timestamp_start = 15;
  uint64 meta_capability_timestamp_emit = 16;
}
